--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "mqtt",
+  "name": "telemetry",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mavlink": "^1.0.1",
-    "mqtt": "^4.3.7",
+    "node-mavlink": "^2.0.5",
     "serialport": "^11.0.0"
   }
 }
